8160698: java --dry-run should not cause main class be initialized

Reviewed-by: ksrini